--- a/style.css
+++ b/style.css
@@ -232,8 +232,8 @@ blockquote p {
    border-radius: 1vw;
    position:absolute;
    left:10vw;
-   max-width: 400;
-   max-height: 225 ;
+   max-width: 400 px;
+   max-height: 225 px;
    overflow:hidden;
    z-index: 2;
 }
