--- a/style.css
+++ b/style.css
@@ -230,19 +230,12 @@ blockquote p {
 
 #video-container {
    border-radius: 1vw;
-   position: relative;
-   padding-bottom: 56.25%; /* 16:9 aspect ratio */
-   height: 0;
-   overflow: hidden;
-    }
-
-    #video-container iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
+   position:absolute;
+   left:10vw;
+   max-width: 45vw;
+   max-height:22vw ;
+   overflow:hidden;
+   z-index: 2;
 }
 
 @media screen and (max-width: 400px){
