--- a/style.css
+++ b/style.css
@@ -50,10 +50,10 @@ body {
 }
 @media screen and (max-width: 500px){
   #title{
-  font-size: 3vw;
+  font-size: 5vw;
   }
-  button{
-  font-size: 10px;
+  .mon-button{
+  top: 50vh;
   }
 }
   .mon-bouton{
