--- a/style.css
+++ b/style.css
@@ -93,24 +93,8 @@ blockquote p {
   margin: 0;
 }
 
-@media screen and (max-width: 500px){
-  #title{
-  font-size: 10vw;
-  top: 10vh;
-  }
-}
-@media screen and (max-width: 1400px){
-  #title{
-  font-size: 6vw;
-  top: 10vh;
-  }
-}
-@media screen and (max-width: 800px){
-  #title{
-  font-size: 8vw;
-  top: 10vh;
-  }
-}
+
+
 #auteur {
   position: absolute;
   color: white;
@@ -247,3 +231,43 @@ transform: scale(1.1);
     height:  28vw;
    }
   }
+
+  @media screen and (max-width: 1100px){
+  #photos{
+    width: 23vw;
+  }
+  #name{
+  font-size: 8vw;
+  top: 70vh;
+  }
+}
+@media screen and (max-width: 500px){
+  #title{
+  font-size: 10vw;
+  top: 10vh;
+  }
+  #photos{
+    width: 35vw;
+  }
+
+}
+@media screen and (max-width: 1400px){
+  #title{
+  font-size: 6vw;
+  top: 5vh;
+  }
+  #auteur{
+  font-size: 2vw;
+  top: 32vh;
+  }
+}
+@media screen and (max-width: 800px){
+  #title{
+  font-size: 8vw;
+  top: 10vh;
+  }
+  #auteur{
+  font-size: 5vw;
+  top: 32vh;
+  }
+}
