--- a/style.css
+++ b/style.css
@@ -267,3 +267,32 @@ transform: scale(1.1);
   top: 32vh;
   }
 }
+@media screen and (max-height: 1000px){
+  #photos{
+  width: 15vw;
+  top: 50vw;
+  }
+  #name{
+  font-size: 5vw;
+  top: 65vw;
+  }
+}
+@media screen and (max-height: 800px){
+  #title{
+  font-size: 5vw;
+  top: -2vw;
+  }
+  #auteur{
+  font-size: 2vw;
+  top: 20vw;
+  }
+  #photos{
+  width: 10vw;
+  top: 50vh;
+  }
+  #name{
+  font-size: 5vw;
+  top: 70vh;
+  }
+}
+
