--- a/style.css
+++ b/style.css
@@ -147,8 +147,13 @@ transform: scale(1.1);
 .gallery img{
   max-width: 100%;
   height: auto;
-
 }
+
+@media screen and (min-width: 1800px){
+  .gallery{
+  grid-template-columns: repeat(auto-fit,minmax(400px,1fr)) ;
+  }
+} 
 
 @media screen and (max-width: 580px){
   .gallery{
