--- a/style2.css
+++ b/style2.css
@@ -10,7 +10,7 @@ html {
 
 }
 body {
-  min-height: 200vh;
+  min-height: 10vh;
   width: 100vw;
   background-color: white;
   margin: 0;
@@ -45,25 +45,29 @@ body {
 .monBouton:hover {
   background-color: #F3F3F3;
 }
-.video-part-container {
-  position: relative; /* Utiliser relative plutôt qu'absolute pour définir les dimensions relatives à ce conteneur */
-  display: grid;
-  grid-column: 1fr;
-  text-align: center;
-  width: 100%;
+.video-part-container{
+  max-width: 100%;
+  min-height: 10vw;
+  display: flex;
   align-items: center;
+  justify-content: center;
+  background-color: white;
+  padding: 10vh;
+  padding-top: 15vh;
+
+}
+.video{
+  display:grid;
+  gap: 5vw;
+  z-index: 2;
+}
+.video img {
+  width: 70vw;
+  height: 30vw;
+  object-fit: cover;
+
 }
 
-.video {
-  width: 100%;
-  margin-top: 10%;
-  margin-bottom: 10%;
-}
-
-.video iframe {
-  width: 70%; /* Utiliser la pleine largeur du conteneur parent */
-  height: 30vw; /* 9/21 aspect ratio, 100vw * 9/21 = 56.25vw */
-}
  @media screen and (min-width: 800px){
   .monBouton{
     font-size: 30px;
