--- a/style2.css
+++ b/style2.css
@@ -65,7 +65,7 @@ body {
   width: 70vw;
   height: 30vw;
   object-fit: cover;
-
+  border-radius: 10px;
 }
 
  @media screen and (min-width: 800px){
