--- a/style.css
+++ b/style.css
@@ -149,10 +149,10 @@ transform: scale(1.1);
   height: auto;
 }
 
-@media screen and (min-width: 1500px){
+/* @media screen and (min-width: 1500px){
   .gallery{
   grid-template-columns: repeat(auto-fit,minmax(400px,2fr)) ;
-  }
+  } */
 } 
 @media screen and (min-width: 950px){
   .gallery{
