--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ transform: scale(1.1);
     font-size: 6vw;
   }
 }
-@media screen and (min-width: 1400px){
+@media screen and (max-width: 1400px){
   #photos{
     width: 50vw;
   }
