--- a/style.css
+++ b/style.css
@@ -169,15 +169,18 @@ transform: scale(1.1);
   .gallery{
   grid-template-columns: repeat(auto-fit,minmax(250px,2fr)) ;
   }
+}
 @media screen and (min-width: 1780px){
   .gallery{
   grid-template-columns: repeat(auto-fit,minmax(300px,2fr)) ;
   }
+}
 @media screen and (min-width: 800px){
   .monBouton{
     font-size: 30px;
   }
 }
+
 @media screen and (min-width: 1000px){
   #photos{
     width: 10vw;
